# game2-bevy-rs

./: Cargo.toml  README.md
src/: main.rs
